[gd_scene format=3 uid="uid://caxny4ehonhre"]

[ext_resource type="Script" uid="uid://h3fxka2ykobe" path="res://items/definitions/projectiles/projectile_base.gd" id="1_5hlo8"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_p7bp6"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:angular_velocity")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:linear_velocity")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="SphereShape3D" id="SphereShape3D_pmu5y"]

[node name="ProjectileBase" type="RigidBody3D" unique_id=709672249]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_5hlo8")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." unique_id=1714199946]
replication_config = SubResource("SceneReplicationConfig_p7bp6")

[node name="PhysicsShape" type="CollisionShape3D" parent="." unique_id=283471477]

[node name="Visuals" type="Node3D" parent="." unique_id=579098310]

[node name="AreaEffect" type="Area3D" parent="." unique_id=1918654380]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 16
monitoring = false
monitorable = false

[node name="ExplosionShape" type="CollisionShape3D" parent="AreaEffect" unique_id=1592878891]
shape = SubResource("SphereShape3D_pmu5y")

[node name="ImpactParticles" type="GPUParticles3D" parent="." unique_id=426355514]
unique_name_in_owner = true
emitting = false
one_shot = true

[node name="ImpactSound" type="AudioStreamPlayer3D" parent="." unique_id=90279983]
unique_name_in_owner = true
